--- a/i3/config
+++ b/i3/config
@@ -1,91 +1,106 @@
-# i3WM config 
-# Owner - Victor Consuegra
-# $mod default is ALT 
+#My i3 config 
+#Atualizado em 10/04/2017 11:44
+#Author Victor Consuegra
+
+#Set mod KEY, my key is ALT
 
 set $mod Mod1
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+#Estilo de fonte das janelas e terminal 
+
 font pango:FantasqueSansMono-Regular.ttf 9
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:FantasqueSansMono-Regular.ttf 12
+#Esconder bordas nas janelas únicas
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+hide_edge_borders true
+
+#Iniciar o xcompmgr
+
+#exec xcompmgr -c -f -n 
+
+#Configurar bordstyle
+
+new_window pixel
+new_float normal
 
 # Use Mouse+$mod to drag floating windows to their wanted position
+
 floating_modifier $mod
 
 # start a terminal
+
 bindsym $mod+Return exec termite
 
 # kill focused window
+
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
-# change focus
+bindsym $mod+d exec dmenu_run -p '>_ '
+
+# Mudar o foco das janelas
+
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
-# alternatively, you can use the cursor keys:
+# Forma alternativa e recomendada de mudar o foco das janelas, use a seta dos teclado
+
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
+# Mover a janela que está em foco
+
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
-# alternatively, you can use the cursor keys:
+# Forma alternativa de mover a janela que está em foco, use a seta do teclado
+
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
+# Mudar a forma de orientação de uma nova janela de forma horizontal
+
 bindsym $mod+h split h
 
-# split in vertical orientation
+# Mudar a forma de orientação de uma nova janela de forma vertical
+
 bindsym $mod+v split v
 
-# enter fullscreen mode for the focused container
+# Alternar a janela em foco para FULLSCREEN
+# Precione novamente para voltar ao normal
+
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
+
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# toggle tiling / floating
+# Alternar a janela em foco para o modo floating
+
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
+
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
+
 bindsym $mod+a focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
 
-# switch to workspace
+# Alterna a área de trabalho
+
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
@@ -97,7 +112,8 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
-# move focused container to workspace
+# Mover a janela em foco, para a área de trabalho selecionada
+
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
@@ -110,19 +126,27 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 #Move workspace
+
 bindsym$mod+m move workspace to output left
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# Recarregar a configuração do i3 para aplicar as alterações do arquivo /root/.config/i3/config
 
-#i3lock
+bindsym $mod+Shift+c reload
+
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+
+bindsym $mod+Shift+r restart
+
+# exit i3 (logs you out of your X session)
+
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m ' Vocẽ apertou o atalho de saída do i3WM, deseja realmente sair do sistema ? .' -b 'Fuck all, im out !.' 'i3-msg exit'"
+
+# Sistema de trava de segurança
+
 bindsym $mod+Shift+p exec i3lock
 
-# resize window (you can also use the mouse for that)
+# Redimensionar janelas (you can also use the mouse for that)
+
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
@@ -148,29 +172,37 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Configuração da barra de status, i3blocks. Observe o caminho das pastas
 
 bar {
-   status_command i3status
-   position top
-mode dock
-workspace_buttons yes
-binding_mode_indicator yes
-font pango: FantasqueSansMono.ttf  07
-  colors {
-               background #252525
-               separator  #18FF00
-               statusline #18FF00
-
-#252525
- # class 		         border    backgrd    text
-               focused_workspace  #196584 #3BDF0B #191919
-               active_workspace   #3BDF0B #3BDF0B #eeeeee
-               inactive_workspace #373737 #222222 #bbbbbb
-               urgent_workspace   #3BDF0B #770000 #eeeeee
-
-
+    #status_command i3status
+    status_command i3blocks -c ~/.config/i3/i3blocks.conf
+    position top
+    font pango:Fantasque Sans Mono 10
+    colors {
+        separator #6E6E6E
+        background #161616
+        statusline #FFFFFF
+       # class              border  backgrd text
+               focused_workspace  #83FF93 #222222 #eeeeee
+               active_workspace   #565656 #444444 #eeeeee
+               inactive_workspace #FF6363 #222222 #bbbbbb
+               urgent_workspace   #7E1919 #770000 #eeeeee
     }
-
 }
+ 
+# Aplicações iniciadas junto do sistema 
+
+exec --no-startup-id nitrogen --restore
+exec --no-startup-id compton &
+
+# Terminal, tema das bordas etc
+
+#class                  border   backgr.  text  indicator
+
+client.focused          #7f8f9f #C0C0C0 #000000 #cad0c4
+client.focused_inactive #000000 #161616 #2D2D2D
+client.unfocused        #000000 #161616 #605e56
+client.urgent           #a5a5a5 #a5a5a5 #1E1E1E
+client.background       #161616
+
