--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,3 +1,6 @@
+# Minha configuração do i3blocks
+# Autor Victor Consuegra
+
 align=center
 separator=false
 separator_block_width=10
@@ -12,40 +15,79 @@ command=echo -e Arch Linux
 interval=30
 color=#5555FF
 
+[Mpd]
+full_text=
+label=
+interval=1
+#color=#C12B4D
+#color=#319402
+color=#3691FF
+
+[uptime_text]
+full_text=
+separator=false
+color=#9fbc00
+
+[uptime]
+command=/root/.config/i3/scripts/uptime
+interval=60
+
+[battery_label]
+full_text=
+color=#FFFFFF
+separator=true
+
+
+[process]
+instance=http
+label=
+interval=10
+
 [Kernel]
 label=
 command=uname -r
 color=#FFFFFF
 interval=once
 
-[Tempo]
+[Hddtemp]
 full_text=
-interval=1800
-color=#7BE8FF
+label=
+command=hddtemp /dev/sda | awk '{print $4}'
+interval=10
+color=#8DB4AA
 
 [disk-home]
-label=:
+label=:
 command=/usr/lib/i3blocks/disk $HOME
-interval=30
+interval=60
 color=#859900
 
 [ip]
-label=
-instance=enp0s3
+label=
+instance=wlan0
 command=/usr/lib/i3blocks/iface
 color=#FF0000
 interval=1
 
+
+[ip]
+label=
+instance=enp7s0
+command=/usr/lib/i3blocks/iface
+color=#Y345TG
+interval=1
+
+
 [Mem]
 label=
 command=echo -e " `free -mh | awk '/^Mem/ {print $3}'` used"  
-interval=10
+interval=5
 color=#CCCCCC
 
 [load]
-label= 
+label=
 command=/usr/lib/i3blocks/load_average
-interval=10
+interval=3
 color=#6c71c4
 
 [volume]
@@ -60,4 +102,3 @@ label=
 command=date '+%a %d-%m-%y  %T'
 interval=1
 color=#50C878
-
